--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Portfolio Setup</title>
+		<title>Portfolio Setup Basic HTML</title>
 	</head>
 	<body>
 		<header>Nav Start</header>
